--- a/window-explorer-launchd.plist
+++ b/window-explorer-launchd.plist
@@ -3,8 +3,8 @@
 <plist version="1.0">
 <dict>
 
-        <!-- launchctl load window-explorer-launchd.plist -->
-        <!-- launchctl unload window-explorer-launchd.plist -->
+        <!-- launchctl load -w window-explorer-launchd.plist -->
+        <!-- launchctl unload -w window-explorer-launchd.plist -->
 
         <key>Label</key>
         <string>window-explorer-launchd.plist</string>
@@ -12,16 +12,13 @@
         <key>Program</key>
         <string>/Users/irshdc/Library/Developer/Xcode/DerivedData/MapExplorer-cebdevedrroybgdstwjueirgqasq/Build/Products/Debug/WindowExplorer.app/Contents/MacOS/WindowExplorer</string>
 
-        <key>RunAtLoad</key>
-        <true/>
-
-        <!-- Start app once on login, restart unless app crashes -->
+        <!-- Start app once on login, restart if app crashes -->
         <key>KeepAlive</key>
         <dict>
           <key>NetworkState</key>
           <true/>
-          <key>Crashed</key>
-        	<false/>
+          <key>SuccessfulExit</key>
+	        <false/>
         </dict>
 
         <key>StandardErrorPath</key>
